--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -18,7 +18,7 @@
     font-family: 'Roboto', -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
     background-color: #f3f3f4;
     color: #7e7f83;
-    height: 100%;
+    height: 100vh;
     margin: 0;
     padding: 0;
   }
@@ -32,27 +32,35 @@
     color: #183a37;
   }
 
+  .wrapper {
+    min-height: 100%;
+    padding: 2rem;
+    display: grid;
+    grid-template-rows: 5rem auto 1rem;
+  }
+
   .Header {
     width: 100%;
   }
   
   .HeaderGroup {
     max-width: 500px;
-    margin: auto;
+    margin: 0 auto;
   
   }
   
   .main {
     max-width: 500px;
-    margin: auto;
+    margin: 0 auto;
   }
 
   .footer {
-    padding: 1.5rem;
+    max-width: 500px;
+    margin: 0 auto;
+    /* padding: 1.5rem; */
     font-size: .7rem;
     /* color: #000; */
     text-align: center;
     font-weight: 400;
-    grid-row-start: 2;
-    grid-row-end: 3;
+  
   }
