--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -15,9 +15,9 @@
   }
 
   body {
-    font-family: 'Roboto', -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-    background-color: #f3f3f4;
-    color: #7e7f83;
+    /* font-family: 'Roboto', -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; */
+    /* background-color: #f3f3f4;
+    color: #7e7f83; */
     height: 100vh;
     margin: 0;
     padding: 0;
@@ -42,18 +42,18 @@
   }
   
   .HeaderGroup {
-    max-width: 500px;
+    max-width: 50%;
     margin: 0 auto;
   
   }
   
   .main {
-    max-width: 500px;
+    max-width: 50%;
     margin: 0 auto;
   }
 
   .footer {
-    max-width: 500px;
+    max-width: 50%;
     margin: 0 auto;
     /* padding: 1.5rem; */
     font-size: .7rem;
