--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -15,9 +15,9 @@
   }
 
   body {
-    /* font-family: 'Roboto', -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; */
-    /* background-color: #f3f3f4;
-    color: #7e7f83; */
+    font-family: 'Work Sans', sans-serif;
+    background-color: #ffffff;
+    color: #353535; 
     height: 100vh;
     margin: 0;
     padding: 0;
@@ -32,6 +32,31 @@
     color: #183a37;
   }
 
+  h1 {
+    font-family: 'Eczar', serif;
+    text-align: center;
+  }
+
+  h3 {
+    text-transform: uppercase;
+    margin: 0;
+  }
+
+  p {
+    font-weight: 300;
+  }
+
+  .subHeading {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: .5rem;
+  }
+
+  .subHeading img {
+    height: 3rem;
+    border-radius: 50%;
+  }
+
   .wrapper {
     min-height: 100%;
     padding: 2rem;
@@ -42,23 +67,19 @@
   }
   
   .HeaderGroup {
-    max-width: 50%;
+    max-width: 500px;
     margin: 0 auto;
-  
   }
   
   .main {
-    max-width: 50%;
+    max-width: 500px;
     margin: 0 auto;
   }
 
   .footer {
-    max-width: 50%;
+    max-width: 500px;
     margin: 0 auto;
-    /* padding: 1.5rem; */
     font-size: .7rem;
-    /* color: #000; */
     text-align: center;
     font-weight: 400;
-  
   }
