--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -26,6 +26,7 @@
   a {
     color: #c44900;
     text-decoration: none;
+    cursor: pointer;
   }
 
   a:hover {
@@ -55,6 +56,9 @@
   .subHeading img {
     height: 3rem;
     border-radius: 50%;
+    -webkit-box-shadow: 0 10px 6px -6px #777;
+    -moz-box-shadow: 0 10px 6px -6px #777;
+         box-shadow: 0 10px 6px -6px #777;
   }
 
   .wrapper {
@@ -69,6 +73,8 @@
   .HeaderGroup {
     max-width: 500px;
     margin: 0 auto;
+    text-align: center;
+    cursor: pointer;
   }
   
   .main {
@@ -83,3 +89,50 @@
     text-align: center;
     font-weight: 400;
   }
+
+  .group {
+    position: relative;
+    margin: 45px 0;
+  }
+  
+
+  .formInput {
+    background: none;
+    background-color: #fff;
+    color: grey;
+    font-size: 18px;
+    padding: 10px 10px 10px 5px;
+    display: block;
+    width: 100%;
+    border: none;
+    border-radius: 0;
+    border-bottom: 1px solid grey;
+    margin: 25px 0;
+  }
+   
+
+.button{
+  text-align: center;
+}
+
+.btn {
+  min-width: 165px;
+  width: auto;
+  height: 50px;
+  letter-spacing: 0.5px;
+  line-height: 50px;
+  padding: 0 35px 0 35px;
+  font-size: 15px;
+  background-color: #000;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: bolder;
+  border: none;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #000;
+}
