--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -90,11 +90,11 @@
     font-weight: 400;
   }
 
-  .group {
+  /* .group {
     position: relative;
     margin: 45px 0;
   }
-  
+   */
 
   .formInput {
     background: none;
