--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -11,7 +11,7 @@
   }
 
   html {
-    height: 100%;
+    height: 100vh;
   }
 
   body {
@@ -59,6 +59,16 @@
     -webkit-box-shadow: 0 10px 6px -6px #777;
     -moz-box-shadow: 0 10px 6px -6px #777;
          box-shadow: 0 10px 6px -6px #777;
+         animation: HeroAnimation;
+         animation-duration: 4s;
+         animation-fill-mode: forwards;
+         animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1);
+         transition: 1s cubic-bezier(0.2, 0.8, 0.2, 1);
+  }
+
+  .subHeading img:hover {
+    filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0, 0, 0, 0.5));
+    transform: translateY(-9px);
   }
 
   .wrapper {
@@ -139,4 +149,10 @@
   background-color: #fff;
   color: #000;
   border: 1px solid #000;
+}
+
+.readFirst {
+  text-align: center;
+  margin: auto;
+  padding: 2rem 0;
 }
